@@ -96,10 +96,9 @@ public class ObjectFactory {
 
         try {
             Class<?> clazz = externalClassForName(type);
-            answer = clazz.newInstance();
+            answer = clazz.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
-            throw new RuntimeException(
-                    MessageFormat.format("Cannot instantiate object of type {0}", new Object[] { type }), e);
+            throw new RuntimeException(MessageFormat.format("Cannot instantiate object of type {0}", new Object[] { type }), e);
         }
 
         return answer;
@@ -140,10 +139,9 @@ public class ObjectFactory {
         try {
             Class<?> clazz = internalClassForName(type);
 
-            answer = clazz.newInstance();
+            answer = clazz.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
-            throw new RuntimeException(
-                    MessageFormat.format("Cannot instantiate object of type {0}", new Object[] { type }), e);
+            throw new RuntimeException(MessageFormat.format("Cannot instantiate object of type {0}", new Object[] { type }), e);
         }
 
         return answer;
